objects/Product_Exclusion__c.object
<CustomObject>
    <description>Products under this object would be exclude/include for CLLA and/or TKR agreements according to state of a flag.</description>
    <fields>
        <fullName>AgreementID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <errorMessage>Agreement should be only CLLA</errorMessage>
            <filterItems>
                <field>Apttus__APTS_Agreement__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>CLLA</value>
            </filterItems>
            <filterItems>
                <field>Apttus__APTS_Agreement__c.APTPS_Product_Sub_Type__c</field>
                <operation>notEqual</operation>
                <value>Temp Key</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Product Exceptions</relationshipLabel>
        <relationshipName>Product_Exclusions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChildAccountID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>Please select account which has Sold To = True</errorMessage>
            <filterItems>
                <field>Account.Sold_To__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.Parent_Account__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.Parent_Account__c</valueField>
            </filterItems>
            <infoMessage>Please select account which has Sold To = True</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Exceptions (Account)</relationshipLabel>
        <relationshipName>Product_Exclusions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <value>NULL</value>
            </filterItems>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Product_Exclusions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Product2.Status__c</field>
                <operation>equals</operation>
                <value>ACTIVE</value>
            </filterItems>
            <filterItems>
                <field>Product2.CLLA_Flag_PL__c</field>
                <operation>notEqual</operation>
                <value>Yes</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Exceptions</relationshipLabel>
        <relationshipName>Product_Exclusions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Available_for__c</fullName>
        <label>Product Available for</label>
        <picklist>
            <picklistValues>
                <fullName>Both</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CLLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TKR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of a record whether it is active or not</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Product Exception</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProductID__c</columns>
        <columns>AgreementID__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>ChildAccountID__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Product Exclusion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Field_Associate_with_Product</fullName>
        <active>true</active>
        <errorConditionFormula>(AgreementID__c == NULL &amp;&amp; ChildAccountID__c == NULL &amp;&amp; Parent_Account__c == NULL)</errorConditionFormula>
        <errorMessage>Please select either “Agreement” or “Parent Account” or “Account” to save the record.</errorMessage>
    </validationRules>
</CustomObject>